--- a/src/index.css
+++ b/src/index.css
@@ -334,48 +334,51 @@ margin-left: auto;
 margin-right: auto;
 }
 
-/* ========================================================= /
-/ === AJUSTES RESPONSIVOS (PARA PANTALLAS PEQUEÑAS) === /
-/ ========================================================= */
 
 @media (max-width: 600px) {
- .product-list {
-justify-content: space-between;
- padding: 10px 0;
+.product-list {
+display: grid;  
+grid-template-columns: 1fr 1fr;  
+gap: 10px;  
+
+padding: 10px 5px; 
+
 }
 
- .product-card {
- width: 49%;
-font-size: 0.85em; 
+.product-card {
+width: 100%;
+font-size: 0.85em;
 box-shadow: 0 4px 10px rgba(0,0,0,0.1);
 }
 
- .product-code {
-  font-size: 1.1em;  
+/* Ajustes de tamaño en móvil para que el contenido quepa */
+.product-code {
+ font-size: 1.1em;
 }
 
- .product-description-short, .real-price {
-font-size: 0.8em;  
+/* Detalle de descripción y precio normal (tachado) */
+.product-description-short, .real-price {
+font-size: 0.8em;
 }
 
 .bid-label, .bid-detail, .bid-price {
-font-size: 0.9em; /* Reducimos la fuente de la PUJA */
+font-size: 0.9em;
 }
 
 .bid-section {
-  padding: 5px 7px; /* Más compacto */
-  margin-top: 8px;
+ padding: 5px 7px;
+ margin-top: 8px;
 }
 
- .image-carousel-container {
-height: 200px;  
+/* El contenedor del carrusel necesita adaptarse */
+.image-carousel-container {
+height: 200px;
 }
 
 }
 
- 
 @media (min-width: 601px) and (max-width: 900px) {
 .product-card {
- width: calc(33.33% - 14px);
+width: calc(33.33% - 14px);
 }
 }
