--- a/src/index.css
+++ b/src/index.css
@@ -82,7 +82,7 @@ margin: 0 auto;
 
 h2 {
 font-size: 2.0em;
-color: #303952;
+color: #ff20ae;
 margin-top: -5px;
 margin-bottom: 15px;
 text-align: center;
